# shimi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: shimi_app.py
data/: README.md  sample_allocation_history.csv  sample_lenders.csv  sample_portfolio_prior.csv
docs/notes/: README.md
docs/spec/: README.md  architecture.md  glossary.md  requirements.md
notebooks/: prototype.ipynb
shimi/: __init__.py
shimi/allocation/: __init__.py  engine.py  exhaustion.py
shimi/data/: __init__.py  history.py  loaders.py  models.py  tape.py
shimi/metrics/: __init__.py  core.py
tests/: test_allocation.py  test_data_layer.py  test_exhaustion.py  test_integration.py  test_metrics.py
